# ytasky

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: ytasky_bench.rs
docs/: architecture.md  design.md  gcal-import.md
src/: app.rs  cli.rs  db.rs  gcal.rs  history.rs  init.rs  lib.rs  main.rs  mcp.rs  model.rs  recurrence.rs  ui.rs  update.rs
src/gcal/: api.rs  auth.rs  import.rs  mod.rs  rrule.rs  types.rs  tz.rs
tests/: db.rs  init.rs  integration.rs  mcp.rs  recurrence.rs
