[package]
name = "ytasky"
version = "0.1.1"
edition = "2024"

[lib]
name = "ytasky"
path = "src/lib.rs"

[[bin]]
name = "ytasky"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "0.8"
anyhow = "1"
dirs = "6"
ybasey = { path = "../ybasey" }

[dev-dependencies]
tempfile = "3"
