[package]
name = "ytasky"
version = "0.1.1"
edition = "2024"

[lib]
name = "ytasky"
path = "src/lib.rs"

[[bin]]
name = "ytasky"
path = "src/main.rs"

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "0.8", optional = true }
anyhow = "1"
dirs = "6"
ybasey = { path = "../ybasey" }

[dev-dependencies]
tempfile = "3"
