[package]
name = "ytasky"
version = "0.2.1"
edition = "2024"

[lib]
name = "ytasky"
path = "src/lib.rs"

[[bin]]
name = "ytasky"
path = "src/main.rs"

[features]
default = ["gcal"]
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars"]
gcal = [
    "dep:reqwest",
    "dep:tiny_http",
    "dep:base64",
    "dep:sha2",
    "dep:rand",
    "dep:url",
    "dep:percent-encoding",
    "dep:webbrowser",
    "dep:fs2",
    "dep:chrono-tz",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
tiny_http = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.10", optional = true }
rand = { version = "0.9", optional = true }
url = { version = "2", optional = true }
percent-encoding = { version = "2", optional = true }
webbrowser = { version = "1", optional = true }
fs2 = { version = "0.4", optional = true }
chrono-tz = { version = "0.10", optional = true }
anyhow = "1"
dirs = "6"
ybasey = { path = "../ybasey" }

[build-dependencies]
serde_json = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ytasky_bench"
harness = false
